[package]
name = "spell-combinator"
version = "0.1.0"
authors = ["Anders Ågren Thuné", "Theo Puranen Åhfeldt"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6.1", features = ["dynamic"] }
rand = "0.8.5"